# GRPC

./: CMakeLists.txt  README.md  helloworld.grpc.pb.h  helloworld.pb.cc  helloworld.proto
clientProject/: client.cpp
serverProject/: server.cpp
